# mdp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.py  test_doc.mdp
.cursor/rules/: mdp.mdc
docs/: CNAME
docs/specification/: mdp_openapi.yaml  mdp_schema.json
mdp/: cli.py  conflict.py  core.py  document.py  metadata.py  utils.py  versioning.py
mdp/commands/: summarize.py
mdp/mcp/: server.py
mdp/schema/: validation.py
mdp/tests/: test_collection_id_types.py  test_conflict_resolution.py  test_ipfs_integration.py  test_relationships.py  test_versioning.py
mdp/tests/test_commands_detailed/: test_diff.py  test_summarize.py
